web.config update

--- a/ElectronicECommerce.WEBUI/Web.config
+++ b/ElectronicECommerce.WEBUI/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   
   <connectionStrings>
-    <add name="CS" connectionString="Data Source=localhost; Integrated Security=True; Initial Catalog=db_EEC" providerName="System.Data.SqlClient"/>
+    <add name="CS" connectionString="Data Source=.; Integrated Security=True; Initial Catalog=db_EEC" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   
   <appSettings>
